# robetarme-deliverables-wp5

./: .clang-format  .env  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml
Doc/: Doxyfile
config/: README.md  (+9 more)
src/boustrophedon_planner/boustrophedon_msgs/: CMakeLists.txt
src/wp5-calibration/: CMakeLists.txt  package.xml
src/wp5-calibration/include/: calib.h
src/wp5-calibration/scripts/: jointToSpline.py  jointToSplineCubic.py
src/wp5-calibration/src/: main_calibration.cpp  main_calibration_camera.cpp  main_calibration_camera_jointspace.cpp  main_calibration_plateform.cpp
src/wp5-calibration/txts/: path_calibration_camera.txt  path_calibration_camera_joint.txt  path_calibration_camera_joint1.txt  smoothed_trajectory.txt
src/wp5-dynamical-system/: CMakeLists.txt  package.xml
src/wp5-dynamical-system/config/: config.yaml  control_config.yaml
src/wp5-dynamical-system/include/: DynamicalSystem.h  library_ds.h
src/wp5-dynamical-system/src/: DynamicalSystem.cpp  library_ds.cpp
src/wp5-main-temp/: CMakeLists.txt  package.xml
src/wp5-main-temp/src/: main_temp.cpp  target_saved.py
src/wp5-perception/: CMakeLists.txt  package.xml
src/wp5-perception/config/: camera_topic_config.yaml
src/wp5-perception/data/matrix/: Y1_matrices.npy
src/wp5-perception/data/pointclouds/: combined_square_inverted_noisy_transformed.ply  combined_square_noisy_transformed.ply  half_cylinder_noisy_inverted_transformed.ply  half_cylinder_noisy_transformed.ply  half_sphere_noisy_inverted_transformed.ply  half_sphere_noisy_transformed.ply  pointcloud_target.ply  square_noisy_transformed.ply  transformed_pointcloud.ply  transformed_pointcloud1 copy.ply  transformed_pointcloud1.ply  transformed_pointcloud2.ply  transformed_pointcloud3.ply  transformed_pointcloud_curved.ply  wave_noisy_transformed.ply
src/wp5-perception/data/target_boundary/: points.txt
src/wp5-perception/launch/: extractTarget.launch  intelrealsens.launch
src/wp5-perception/pointclouds/: point_cloud.ply
src/wp5-perception/scripts/: SleceteROI.py  publishPoint.py  see.py  toyDartaMaker.py
src/wp5-perception/src/: camera_connection.py  point_cloud_transformer copy.py  point_cloud_transformer.py  target_extraction.py  target_extraction_intel.py  target_substraction copy.py  target_substraction.py
src/wp5-perception/target_boundary/: points.txt
src/wp5-planner/: CMakeLists.txt  dataCurvedTarget.tar.xz  package.xml
src/wp5-planner-ros/: CMakeLists.txt  README.md  package.xml
src/wp5-planner-ros/config/: config.yaml  target_config.yaml
src/wp5-planner-ros/include/: BoustrophedonServer.h  PathPlanner.h  PolygonCoverage.h  TargetExtraction.h
src/wp5-planner-ros/src/: BoustrophedonServer.cpp  PathPlanner.cpp  PolygonCoverage.cpp  TargetExtraction.cpp
src/wp5-planner/config/: control_config.yaml
src/wp5-planner/data/UVmap/: normvector_pointcloud_target_transformed.txt  uv_coords_index_reshaped.txt  uv_coords_index_unique.txt  uv_map_pointcloud_target_transformed.txt  uv_points_pointcloud_target_transformed.txt
src/wp5-planner/include/: PolygonCoverage.h
src/wp5-planner/scripts/: DepthCamera_2024-06-12-13-31-36.json  ExtractPolygons.py  flattened_output.ply  flatter.py  flatter_curved.py  getUVMap copy.py  getUVMap.py  initializationFeatureSpace copy.py  initializationFeatureSpace.py  iteration_mapping.py  meshplot.py  plot.py  plotmesh.py  point_cloud_transformer copy.py  point_cloud_transformer.py  printptath.py  see.py  target_extraction.py  transformWaypoints.py  transformed_pointlcoud.py
src/wp5-planner/src/: PolygonCoverage.cpp
src/wp5-robotic-arms/: CMakeLists.txt  package.xml
src/wp5-robotic-arms/config/: IK.yaml  arm_robot_config.yaml  config.yaml  robot_config.yaml
src/wp5-robotic-arms/include/: IRoboticArmBase.h  RoboticArmCobod.h  RoboticArmCr7.h  RoboticArmFactory.h  RoboticArmIiwa7.h  RoboticArmUr5.h  Utils.h
src/wp5-robotic-arms/src/: IRoboticArmBase.cpp  RoboticArmCobod.cpp  RoboticArmIiwa7.cpp  RoboticArmUr5.cpp
src/wp5-robotic-arms/urdf/: cobod.urdf  iiwa7.urdf  iiwa7.urdf.save  ur5.urdf  ur5_ridgeback.urdf
src/wp5-ros-interface/: CMakeLists.txt  package.xml
src/wp5-ros-interface/config/: config.yaml  ros_interface_config.yaml
src/wp5-ros-interface/include/: RosInterfaceNoetic.h
src/wp5-ros-interface/src/: RosInterfaceNoetic.cpp
src/wp5-tasks/: CMakeLists.txt  package.xml
src/wp5-tasks-action/: CMakeLists.txt  package.xml
src/wp5-tasks-action/launch/: tasks_action.launch  tasks_action_client.launch
src/wp5-tasks-action/src/: tasks_action_client.cpp  tasks_action_server.cpp
src/wp5-tasks/config/: config.yaml  tasks_config.yaml
src/wp5-tasks/include/: ExecuteTaskAction.h  ITaskBase.h  TaskFSM.h  TaskFactory.h  TaskSafeFSM.h  TaskShotcrete copy.h  TaskShotcrete.h  TaskSurfaceFinishing.h  Tasks.h
src/wp5-tasks/launch/: main_task.launch  main_task_temp.launch  main_task_temp_sf.launch  tasks_action_server.launch  test.launch
src/wp5-tasks/pointclouds/: transformed_pointcloud.ply
src/wp5-tasks/scripts/: fct_plot.py  metrics_ploting.py  see_pointcloud.py  target_saved.py  target_saved_sf.py
src/wp5-tasks/src/: ITaskBase.cpp  TaskShotcrete.cpp  TaskSurfaceFinishing.cpp  TaskSurfaceFinishing_boustrophedon_v1.cpp  Tasks.cpp  go_to_marker.cpp  impedance_control.cpp  main_task.cpp  main_task_sf.cpp  main_task_shotcrete.cpp  main_task_surface_finishing.cpp  recordPathJoint.cpp  savePathFromTxt.cpp  target_saved.py  task_shotcrete.cpp  task_surface_finishing.cpp  test.cpp
src/wp5-tasks/txts/: boustrophedon_20points.txt  boustrophedon_4points.txt  path.txt  path_calibration.txt  path_flat.txt  path_original.txt  quatPos.tar.xz  quatPos.txt
src/wp5_main_temp/: CMakeLists.txt  package.xml
src/wp5_main_temp/src/: main_temp.cpp
wp5-robotic-arms/: CMakeLists.txt
wp5-robotic-arms/include/: IRoboticArmBase.h  RoboticArmCobod.h  RoboticArmUr5.h
wp5-robotic-arms/src/: RoboticArmCr7.cpp  RoboticArmUr5.cpp
wp5-ros-planner/: CMakeLists.txt  package.xml
wp5-ros-planner/include/: BoustrophedonServer.h  PathPlanner.h  TargetExtraction.h
(+2080 files in other folders)
