<?xml version="1.0"?>
<package format="2">
  <name>wp5-ros-planner</name>
  <version>0.1.0</version>
  <description>The wp5-ros-planner package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>boustrophedon_msgs</build_depend>
  <build_depend>boustrophedon_server</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>boustrophedon_msgs</exec_depend>
  <exec_depend>boustrophedon_server</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>

  <!-- Add any additional dependencies as needed -->

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
