<?xml version="1.0"?>
<package format="2">
  <name>wp5_planner</name>
  <version>0.0.0</version>
  <description>The wp5_planner package</description>

  <maintainer email="lasa@todo.todo">lasa</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>polygon_coverage_planners</build_depend>
  <build_depend>polygon_coverage_msgs</build_depend>
  <build_depend>polygon_coverage_ros</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>pybind11</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>polygon_coverage_planners</build_export_depend>
  <build_export_depend>polygon_coverage_msgs</build_export_depend>
  <build_export_depend>polygon_coverage_ros</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>yaml-cpp</build_export_depend>
  <build_export_depend>pybind11</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>polygon_coverage_planners</exec_depend>
  <exec_depend>polygon_coverage_msgs</exec_depend>
  <exec_depend>polygon_coverage_ros</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>pybind11</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
