<?xml version="1.0"?>
<package format="2">
    <name>wp5_tasks_action</name>
    <version>1.0.0</version>
    <description>ROS Action to choose which task has to be done.</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="lmunier@protonmail.com">Louis Munier</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>wp5_tasks</depend>
    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>
    <depend>std_msgs</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>